--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pandas==0.25.3
 Pillow==6.2.1
 pkg-resources==0.0.0
 pyparsing==2.4.2
+PyPDF2==1.26.0
 python-dateutil==2.8.1
 pytz==2019.3
 six==1.12.0
