--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+certifi==2019.9.11
+chardet==3.0.4
 cycler==0.10.0
+idna==2.8
 kiwisolver==1.1.0
 matplotlib==3.1.1
 numpy==1.17.3
@@ -9,4 +12,6 @@ pyparsing==2.4.2
 PyPDF2==1.26.0
 python-dateutil==2.8.1
 pytz==2019.3
+requests==2.22.0
 six==1.12.0
+urllib3==1.25.6
